...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mkk-Vh-SBU">
                                <rect key="frame" x="8" y="92" width="164" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="92E-id-LbH"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                <state key="normal" title="Conversar">
                                    <color key="titleColor" white="0.0" alpha="0.66000000000000003" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                        <real key="value" value="1"/>
                                    </userDefinedRuntimeAttribute>
...
                                <rect key="frame" x="203" y="92" width="164" height="40"/>
                                <color key="backgroundColor" red="0.93725490196078431" green="0.22745098039215686" blue="0.36470588235294116" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="Amu-TN-wFT"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                <state key="normal" title="Reservar de novo">
                                    <color key="titleColor" white="1" alpha="0.66000000000000003" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <real key="value" value="2"/>
                                    </userDefinedRuntimeAttribute>
...
